@@ -1,3 +1,9 @@
+2013-08-20  Alan Modra  <amodra@gmail.com>
+
+	* floatformat.c (floatformat_ibm_long_double): Rename to..
+	(floatformat_ibm_long_double_big): ..this.
+	(floatformat_ibm_long_double_little): New.
+
 2013-05-06  David Edelsohn  <dje.gcc@gmail.com>
 	    Peter Bergner  <bergner@vnet.ibm.com>
 	    Segher Boessenkool  <segher@kernel.crashing.org>
